<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="number_of_people_in_group">Number of people in group:</string>
    <string name="non_smoking_area">Non-Smoking Area</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
</resources>